fixed bug with aboutSection alignment

--- a/src/styles/Campaign/Campaign.module.css
+++ b/src/styles/Campaign/Campaign.module.css
@@ -60,7 +60,7 @@
     }
   
     .sliderContainer {
-      height: 400px;
+      height: 300px;
       width: 100%;
       background-color: #e53e3e;
       position: static;
