--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -7,5 +7,7 @@
 }
 
 @media (max-width: 600px) {
-    
+    .pageTitle{
+        margin-top: 2000px;
+    }
 }
