--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -63,7 +63,7 @@
 .aboutBoxes {
   position: absolute;
   top: 550px;
-  left: 12%;
+  left: 20%;
   display: flex;
   justify-content: space-between;
   margin: auto;
@@ -170,7 +170,7 @@
   .aboutBoxes {
     position: absolute;
     top: 450px;
-    left: 10%;
+    left: 15%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
